--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
 a:link{
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
 .main{
     display: flex;
@@ -27,7 +28,7 @@ a:link{
 }
 .links{
     display: flex;
-    gap: 15px;
+    gap: 30px;
     list-style-type: none;
     padding-right: 78px;
 }
@@ -77,15 +78,15 @@ a:link{
 .two{
     background-color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-content: center;
     
 }
 .square{
     border: 3px solid #3882f6;
     border-radius: 15px;
-    height: 100px;
-    width: 100px;
+    height: 200px;
+    width: 200px;
     margin: 30px;
 
 }
@@ -94,20 +95,38 @@ a:link{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-left: 50px;
+
+    gap: 5px;
 }
 .subheader{
     text-align: center;
-    color: black;
+    color: #1f2937;
     font-size: 36px;
     font-weight: 900;
     margin: 20px;
 }
 
-
+/* Thrid section */
 .three{
     background-color: #e5e7eb;
-    height: 100px;
+    margin-top: 60px;
+    padding: 30px;
+}
+.contents{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px
+}
+.paragraph{
+    font-size: 36px;
+    font-style: italic;
+}
+.author{
+    font-size: 27px;
+    font-weight: bold;
+    align-self: flex-end;
 }
 .four{
     background-color: white;
